--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,8 @@
 }
 
 
-.uls{
-    text-decoration: none;
+#list{
+    list-style-type: none;
     /* text-decoration-line: line-through; */
 }
 
@@ -41,11 +41,6 @@
     background-color: lightgrey;
 }
 
-.uls > ul > a{
-    list-style: none;
-    color: black;
-    text-decoration-line: none;
-}
 
 li{
     font-size: 25px;
