--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,10 @@
     /* text-decoration-line: line-through; */
 }
 
-#butonx{
-    margin-right: 10px;
+#silme{
+    width: 32px;
+    height: 32px;
+    float: right;
 }
 
 .uls {
